--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-MvcSpoon-E82A8672-20EB-4E29-B1CE-27E1055C1BCE;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
+  //"ConnectionStrings": {
+  // "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-MvcSpoon-E82A8672-20EB-4E29-B1CE-27E1055C1BCE;Trusted_Connection=True;MultipleActiveResultSets=true"
+  //},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -9,5 +9,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MvcMovieContext-1;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
