--- a/appsettings.json
+++ b/appsettings.json
@@ -11,6 +11,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
+    //made it default connection
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MvcMovieContext-1;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
